--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
 <meta name="robots" content="noindex, nofollow">
-<title>Photo Gallery</title>
+<title>Galeria de fotos riicasa</title>
   <meta content='https://i.postimg.cc/P561nV9G/Screenshot-642.png' property='og:image'/>
 <!DOCTYPE html>
 <html lang="en">
