--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
 <meta name="robots" content="noindex, nofollow">
-<title>Galeria de fotos riicasa</title>
+<title>Galeria de fotos riicaas</title>
   <meta content='https://i.postimg.cc/P561nV9G/Screenshot-642.png' property='og:image'/>
 <!DOCTYPE html>
 <html lang="en">
@@ -65,7 +65,8 @@
            SOMOS DAMAS DE COMPAÑIA  PARA VERNOS COMPLETAMENTE DESNUDAS EN VIVO Y DISPUESTAS A COGER CONTIGO, REGISTRATE EN EL SITIO QUE TE APARECERA A CONTINUACION                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                
           </h1>
           <p>
-            <b                                                                                                                                                                                              EL REGISTRO ES COMPLETAMENTE GRATUITO, CHICAS DESNUDAS PARA TI                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             
+            <b>
+                                                                                                                                                                                                              EL REGISTRO ES COMPLETAMENTE GRATUITO, CHICAS DESNUDAS PARA TI                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             
             </b>
             <br>
           PUEDES ELEGIR CUALQUIER CHICA Y FOOLAR CON ELLA, REGISTRATE EN LA SIGUIENTE PAGINA                              
